# fastap-p-i

./: README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py  logger.py
app/db/: database.py  user.py
app/internal/: admin.py
app/routers/: health.py  user.py
app/schemas/: user.py
app/services/: user_service.py
tests/: test_health.py
